# VoiceAgentWeb

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-02-27-voice-agent-web-design.md  2026-02-27-voice-agent-web-implementation.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js  audio.js  pcm-worklet.js  websocket.js
server/: config.py  llm.py  main.py  session.py  stt.py  tts.py  vad.py
tests/: test_llm.py  test_server.py  test_session.py  test_stt.py  test_tts.py  test_vad.py
